ingress/01_spring-app-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spring-app
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`spring.local`)
      kind: Rule
      services:
        - name: devops-prometheus-svc
          port: 8080
