ingress/02_spring-app-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spring-app
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.local`)
      kind: Rule
      services:
        - name: prometheus-svc
          port: 9090
